--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
+    "react-animated-css": "^1.2.1",
+    "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
+    "react-is-visible": "^1.2.0",
+    "react-parallax": "^3.3.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
